# spyglass-examples

./: README.md  use-local-sdk.py
.github/workflows/: spyglass.yaml
fastapi-langchain/: .env.example  README.md  fastapi-langchain.py  pyproject.toml
langchain-aws/: .env.example  README.md  langchain-aws.py  pyproject.toml
langchain-azure/: README.md  langchain-azure.py  pyproject.toml
openai-simple/: .env.example  README.md  model.yaml  pyproject.toml
spyglass-example-project/: langchain-aws.py  openai-simple.py
